Quick'n'dirty $Get-$Piece optimization cache;

--- a/priv/egtm.conf
+++ b/priv/egtm.conf
@@ -29,12 +29,39 @@
 
   %% Functions that are for some (security) reason denied
   %{deny, [kill, do, call, merge, xecute]}
-  {deny, []}
-  %,
+  {deny, []},
+
   %% String encoder/decoder functions
   %{string_conversion, [
   %  {encode, {egtm_string, erl2utf} },
-  %  {decode, {egtm_string, utf2erl} } ]}
+  %  {decode, {egtm_string, utf2erl} } ]},
+
+  %% Dynamic Optimizer settings
+  {optimize, [
+
+    %% Use $Get(@Gvn@Subs) Erlang-side cache?
+    %% This would speed up the code where the
+    %% repetitive $Get on the same @Gvn@Subs
+    %% is performed -- such as multiple non-native
+    %% `getp' calls.
+    %% Any non-true value means to not use $Get-cache.
+    %% Default is false.
+    {get_cache, [
+      %{enabled, false},
+      {enabled, true},
+      {timeout, 5}
+    ]},
+
+    %% Use native $P($G(@Gvn@Subs,Delim,Piece)) from
+    %% getp^%egtmapi or use standard get^%egtmapi
+    %% in combination with Erlang-based $Piece-emulation?
+    %% Any non-false value means to use native getp.
+    %% Default is true.
+    %{native_getp, true}
+    {native_getp, false}
+  ]},
+
+  true  %% dummy to avoid trailing commas
 ]}.
 
 %% egtm metrics: histograms and counters
