--- a/rebar.config
+++ b/rebar.config
@@ -17,7 +17,8 @@
   %% Lager must be first because of Erlang form transformations
   {lager, ".*", {git, "https://github.com/basho/lager.git", "master"}},
   {deepprops, ".*", {git, "https://github.com/keynslug/deepprops.git", "master"}},
-  {folsom, ".*", {git, "https://github.com/boundary/folsom.git", "master"}}
+  {folsom, ".*", {git, "https://github.com/boundary/folsom.git", "master"}},
+  {ecache, ".*", {git, "https://github.com/dweldon/ecache.git", "master"}}
 ]}.
 
 {port_envs, [
