Default options for $Get-Cache and native getp;

--- a/priv/egtm.conf
+++ b/priv/egtm.conf
@@ -47,8 +47,8 @@
     %% Any non-true value means to not use $Get-cache.
     %% Default is false.
     {get_cache, [
-      %{enabled, false},
-      {enabled, true},
+      {enabled, false},
+      %{enabled, true},
       {timeout, 5}
     ]},
 
@@ -57,8 +57,8 @@
     %% in combination with Erlang-based $Piece-emulation?
     %% Any non-false value means to use native getp.
     %% Default is true.
-    %{native_getp, true}
-    {native_getp, false}
+    {native_getp, true}
+    %{native_getp, false}
   ]},
 
   true  %% dummy to avoid trailing commas
